pull latest translations from crowdin

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -103,7 +103,7 @@
   "photo": "Foto",
   "cannotUpdate": "Kann nicht aktualisiert werden",
   "cannotUpdateDetail": "Session Desktop konnte nicht aktualisiert werden, aber es ist eine neue Version verfügbar. Bitte gehen Sie auf https://getsession.org/ und installieren Sie die neue Version manuell; anschließend wenden Sie sich bitte entweder an den Support oder melden Sie das Problem.",
-  "ok": "Ok",
+  "ok": "OK",
   "cancel": "Abbrechen",
   "close": "Schließen",
   "continue": "Weiter",
@@ -138,7 +138,7 @@
   "videoAttachmentAlt": "Vorschaubild für Videoanhang",
   "lightboxImageAlt": "In Unterhaltung gesendetes Bild",
   "imageCaptionIconAlt": "Symbol, das auf eine Beschriftung des Bildes hinweist",
-  "addACaption": "Beschriftung hinzufügen …",
+  "addACaption": "Beschriftung hinzufügen...",
   "copy": "Kopieren",
   "copySessionID": "Session-ID kopieren",
   "copyOpenGroupURL": "Gruppen-URL kopieren",
@@ -159,10 +159,10 @@
   "notifications": "Benachrichtigungen",
   "readReceiptSettingDescription": "Lesebestätigungen aktivieren",
   "readReceiptSettingTitle": "Lesebestätigungen",
-  "typingIndicatorsSettingDescription": "sehen und teilen, wann Nachrichten eingetippt werden",
+  "typingIndicatorsSettingDescription": "Sehen und teilen, wann Nachrichten eingetippt werden.",
   "typingIndicatorsSettingTitle": "Tipp-Indikatoren",
   "zoomFactorSettingTitle": "Zoomstufe",
-  "notificationSettingsDialog": "Beim Eingang von Nachrichten Benachrichtigungen mit folgendem Inhalt anzeigen:",
+  "notificationSettingsDialog": "Beim Eingang von Nachrichten Benachrichtigungen mit folgendem Inhalt anzeigen...",
   "disableNotifications": "Stummschalten",
   "nameAndMessage": "Kontaktname und Nachricht",
   "noNameOrMessage": "Weder Name noch Nachricht",
@@ -183,9 +183,9 @@
   "messageBodyMissing": "Bitte geben Sie einen Nachrichtentext ein.",
   "unblockToSend": "Gib die Blockierung dieses Kontakts frei, um eine Nachricht zu senden.",
   "unblockGroupToSend": "Gib die Blockierung dieser Gruppe frei, um eine Nachricht zu senden.",
-  "youChangedTheTimer": "Du hast die Zeit für verschwindende Nachrichten auf $time$ festgelegt.",
+  "youChangedTheTimer": "Du hast die Zeit für verschwindende Nachrichten auf $time$ festgelegt",
   "timerSetOnSync": "Zeitbegrenzung für verschwindende Nachrichten wurde auf $time$ aktualisiert",
-  "theyChangedTheTimer": "$name$ hat die Zeit für verschwindende Nachrichten auf $time$ festgelegt.",
+  "theyChangedTheTimer": "$name$ hat die Zeit für verschwindende Nachrichten auf $time$ festgelegt",
   "timerOption_0_seconds": "Aus",
   "timerOption_5_seconds": "5 Sekunden",
   "timerOption_10_seconds": "10 Sekunden",
@@ -222,10 +222,10 @@
   "noteToSelf": "Notiz an mich",
   "hideMenuBarTitle": "Menüleiste ausblenden",
   "hideMenuBarDescription": "Sichtbarkeit des Menüleiste umschalten",
-  "startConversation": "Neue Unterhaltung beginnen …",
+  "startConversation": "Neue Unterhaltung Beginnen",
   "invalidNumberError": "Ungültige Rufnummer",
   "failedResolveOns": "Fehler beim Auflösen des ONS-Namens",
-  "successUnlinked": "Ihr Gerät wurde erfolgreich getrennt.",
+  "successUnlinked": "Ihr Gerät wurde erfolgreich getrennt",
   "autoUpdateSettingTitle": "Automatische Aktualisierung",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Aktualisierung für Session verfügbar",
@@ -265,14 +265,14 @@
   "leaveGroupConfirmationAdmin": "Da du Admin dieser Gruppe bist wird sie für alle derzeitigen Mitglieder gelöscht. Bist du dir sicher das du die Gruppe verlassen möchtest?",
   "cannotRemoveCreatorFromGroup": "Dieser Nutzer kann nicht entfernt werden",
   "cannotRemoveCreatorFromGroupDesc": "Du kannst diesen Nutzer nicht entfernen da er der Ersteller der Gruppe ist.",
-  "noContactsForGroup": "Sie haben noch keine Kontakte.",
+  "noContactsForGroup": "Sie haben noch keine Kontakte",
   "failedToAddAsModerator": "Benutzer als Moderator hinzufügen fehlgeschlagen",
   "failedToRemoveFromModerator": "Benutzer von Moderatorenliste entfernen fehlgeschlagen",
   "copyMessage": "Nachrichtentext kopieren",
   "selectMessage": "Nachricht auswählen",
   "editGroup": "Gruppe bearbeiten",
   "editGroupName": "Gruppe bearbeiten",
-  "updateGroupDialogTitle": "$name$ wird aktualisiert …",
+  "updateGroupDialogTitle": "$name$ wird aktualisiert...",
   "showRecoveryPhrase": "Wiederherstellungssatz",
   "yourSessionID": "Ihre Session ID",
   "setAccountPasswordTitle": "Accountpasswort festlegen",
@@ -315,7 +315,7 @@
   "connectToServerSuccess": "Erfolgreich zu offener Gruppe verbunden",
   "setPasswordFail": "Passwort setzen fehlgeschlagen",
   "passwordLengthError": "Das Passwort muss zwischen 6 und 64 Zeichen lang sein",
-  "passwordTypeError": "Password must be a string",
+  "passwordTypeError": "Das Passwort muss eine Zeichenkette sein",
   "passwordCharacterError": "Das Passwort darf nur Buchstaben, Zahlen und Symbole enthalten",
   "remove": "Entfernen",
   "invalidSessionId": "Ungültige Session ID",
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Nur der Ersteller der Gruppe kann Benutzer entfernen",
   "createAccount": "Konto Erstellen",
   "signIn": "Einloggen",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Das ist Ihre Session ID.",
   "allUsersAreRandomly...": "Ihre Session ID ist die eindeutige Adresse, unter der Personen Sie über Session kontaktieren können. Ihre Session ID ist nicht mit Ihrer realen Identität verbunden, völlig anonym und von Natur aus privat.",
   "getStarted": "Loslegen",
@@ -345,24 +347,24 @@
   "enterRecoveryPhrase": "Ihr Wiederherstellungssatz",
   "displayName": "Anzeigename",
   "anonymous": "Anonym",
-  "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
+  "removeResidueMembers": "Wenn du auf Ok klickst, werden diese Mitglieder auch gelöscht, da sie die Gruppe verlassen haben.",
   "enterDisplayName": "Geben Sie einen Anzeigenamen ein",
-  "enterOptionalPassword": "Enter password (optional)",
+  "enterOptionalPassword": "Passwort eingeben (optional)",
   "continueYourSession": "Ihre Session fortsetzen",
   "linkDevice": "Gerät verbinden",
   "restoreUsingRecoveryPhrase": "Ihr Konto wiederherstellen",
   "or": "oder",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
-  "beginYourSession": "Beginnen<br />Sie<br />Ihre<br />Session.",
+  "ByUsingThisService...": "Durch die Nutzung dieses Dienstes stimmst du unseren <a href=\"https://getsession.org/legal/#tos\">Nutzungsbedingungen</a> und <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a> zu",
+  "beginYourSession": "Beginnen Sie Ihre Session.",
   "welcomeToYourSession": "Willkommen bei Session",
   "newSession": "Neue Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Nach Unterhaltungen oder Kontakten suchen",
   "enterSessionID": "Session ID eingeben",
   "enterSessionIDOfRecipient": "Geben Sie eine Session ID ein.",
   "usersCanShareTheir...": "Benutzer können ihre Session ID freigeben, indem sie in ihren Einstellungen auf \"Session ID freigeben\" tippen oder ihren QR-Code freigeben.",
-  "message": "Message",
+  "message": "Nachricht",
   "appearanceSettingsTitle": "Darstellung",
-  "permissionSettingsTitle": "Permissions",
+  "permissionSettingsTitle": "Berechtigungen",
   "privacySettingsTitle": "Datenschutz",
   "notificationsSettingsTitle": "Benachrichtigungen",
   "recoveryPhraseEmpty": "Ihr Wiederherstellungssatz",
@@ -380,32 +382,32 @@
   "invalidGroupNameTooLong": "Bitte geben Sie einen kürzeren Gruppennamen ein.",
   "pickClosedGroupMember": "Bitte wählen Sie mindestens zwei Gruppenmitglieder aus.",
   "closedGroupMaxSize": "Eine geschlossene Gruppe kann maximal einhundert Mitglieder haben.",
-  "noBlockedContacts": "No blocked contacts",
-  "userAddedToModerators": "User added to moderator list",
-  "userRemovedFromModerators": "User removed from moderator list",
-  "orJoinOneOfThese": "Or join one of these...",
-  "helpUsTranslateSession": "Help us Translate Session",
-  "translation": "Translation",
-  "closedGroupInviteFailTitle": "Group Invitation Failed",
-  "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
-  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
-  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
-  "closedGroupInviteOkText": "Retry invitations",
-  "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
-  "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
-  "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
-  "notificationForConvo": "Notifications",
-  "notificationForConvo_all": "All",
-  "notificationForConvo_disabled": "Disabled",
-  "notificationForConvo_mentions_only": "Mentions only",
-  "onionPathIndicatorTitle": "Path",
-  "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
-  "unknownCountry": "Unknown Country",
-  "device": "Device",
-  "destination": "Destination",
-  "learnMore": "Learn more",
-  "linkVisitWarningTitle": "Open this link in your browser?",
-  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
+  "noBlockedContacts": "Keine blockierten Kontakte",
+  "userAddedToModerators": "Benutzer zur Moderatorenliste hinzugefügt",
+  "userRemovedFromModerators": "Benutzer von der Moderatorenliste entfernt",
+  "orJoinOneOfThese": "Oder tritt einer von diesen bei...",
+  "helpUsTranslateSession": "Hilf uns, Session zu übersetzen",
+  "translation": "Übersetzung",
+  "closedGroupInviteFailTitle": "Einladung in die Gruppe fehlgeschlagen",
+  "closedGroupInviteFailTitlePlural": "Einladungen in die Gruppe fehlgeschlagen",
+  "closedGroupInviteFailMessage": "Gruppenmitglied konnte nicht eingeladen werden",
+  "closedGroupInviteFailMessagePlural": "Keiner der Gruppenmitglieder konnten nicht eingeladen werden",
+  "closedGroupInviteOkText": "Einladungen erneut senden",
+  "closedGroupInviteSuccessTitlePlural": "Gruppeneinladungen abgeschlossen",
+  "closedGroupInviteSuccessTitle": "Gruppeneinladung erfolgreich",
+  "closedGroupInviteSuccessMessage": "Gruppenmitglieder der geschlossenen Gruppe wurden erfolgreich eingeladen",
+  "notificationForConvo": "Benachrichtigungen",
+  "notificationForConvo_all": "Alle",
+  "notificationForConvo_disabled": "Deaktiviert",
+  "notificationForConvo_mentions_only": "Nur Erwähnungen",
+  "onionPathIndicatorTitle": "Pfad",
+  "onionPathIndicatorDescription": "Session verbirgt deine IP-Adresse, indem deine Nachrichten über mehrere Dienstknoten im dezentralen Session-Netzwerk weitergeleitet werden. Dies sind die Länder, durch die deine Verbindung derzeit weitergeleitet wird:",
+  "unknownCountry": "Unbekanntes Land",
+  "device": "Gerät",
+  "destination": "Zielort",
+  "learnMore": "Mehr erfahren",
+  "linkVisitWarningTitle": "Diesen Link in deinem Browser öffnen?",
+  "linkVisitWarningMessage": "Bist du sicher, dass du $url$ in deinem Browser öffnen willst?",
   "open": "Öffnen",
   "audioMessageAutoplayTitle": "Audionachricht automatische Wiedergabe",
   "audioMessageAutoplayDescription": "Automatisch in Folge gesendete Audionachrichten abspielen",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "Erste ungelesene Nachricht ist oben",
   "sendRecoveryPhraseTitle": "Wiederherstellungsphrase zusenden",
   "sendRecoveryPhraseMessage": "Mit der Wiederherstellungsphrase kann auf deinen Account zugegriffen werden. Bist du dir sicher das du sie dir zusenden lassen möchtest?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Benachrichtigungen - $setting$"
 }
