--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Solo il creatore del gruppo può rimuovere gli utenti",
   "createAccount": "Create Account",
   "signIn": "Accedi",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Ecco la tua Sessione ID",
   "allUsersAreRandomly...": "La Sessione ID è l'indirizzo univoco che le persone possono utilizzare per contattarti su una Sessione. Senza alcuna connessione con la tua vera identità, la Sessione ID è totalmente anonimo e privato fin dal incezione.",
   "getStarted": "Inizia qui",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "Ripristina il tuo account",
   "or": "o",
   "ByUsingThisService...": "Utilizzando questo servizio, accetti i nostri <a href=\"https://getsession.org/legal/#tos\">Termini di Servizio</a> e <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Informativa sulla privacy</a>",
-  "beginYourSession": "Inizia<br />la tua<br />Session.",
+  "beginYourSession": "Inizia la tua Session.",
   "welcomeToYourSession": "Benvenuto su Session",
   "newSession": "Nuova sessione",
   "searchFor...": "Ricerca conversazioni o contatti",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "Il primo messaggio non letto è sopra",
   "sendRecoveryPhraseTitle": "Invio Frase Di Recupero",
   "sendRecoveryPhraseMessage": "Stai tentando di inviare la frase di recupero che può essere utilizzata per accedere al tuo account. Sei sicuro di voler inviare questo messaggio?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifiche - $setting$"
 }
