--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Tylko twórca grupy może usunąć użytkowników",
   "createAccount": "Create Account",
   "signIn": "Zaloguj się",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Przywitaj się z identyfikatorem Session",
   "allUsersAreRandomly...": "Twój identyfikator Session to unikalny adres, za pomocą którego można się z Tobą kontaktować w Sesji. Bez połączenia z twoją prawdziwą tożsamością, identyfikator Session jest z założenia całkowicie anonimowy i prywatny.",
   "getStarted": "Rozpocznij",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "Przywróć swoje konto",
   "or": "lub",
   "ByUsingThisService...": "Korzystając z tej usługi, akceptujesz nasze <a href=\"https://getsession.org/legal/#tos\">Warunki korzystania z usługi</a> i <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Politykę prywatności</a>",
-  "beginYourSession": "Rozpocznij<br />swój<br />Session.",
+  "beginYourSession": "Rozpocznij swój Session.",
   "welcomeToYourSession": "Witamy w twoim Session",
   "newSession": "Nowa Session",
   "searchFor...": "Szukaj konwersacji lub kontaktów",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "Pierwsza nieprzeczytana wiadomość jest powyżej",
   "sendRecoveryPhraseTitle": "Wysyłanie frazy odzyskiwania",
   "sendRecoveryPhraseMessage": "Próbujesz wysłać frazę odzyskiwania, która może być użyta do uzyskania dostępu do twojego konta. Czy na pewno chcesz wysłać tę wiadomość?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Powiadomienia - $setting$"
 }
