--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,7 +1,7 @@
 {
   "privacyPolicy": "Условия и политика конфиденциальности",
   "copyErrorAndQuit": "Скопировать ошибку и выйти",
-  "unknown": "Неизвестен",
+  "unknown": "Неизвестно",
   "databaseError": "Ошибка базы данных",
   "mainMenuFile": "&Файл",
   "mainMenuEdit": "&Изменить",
@@ -9,32 +9,32 @@
   "mainMenuWindow": "&Окно",
   "mainMenuHelp": "&Помощь",
   "appMenuHide": "Скрыть",
-  "appMenuHideOthers": "Скрыть другие",
-  "appMenuUnhide": "Показать все",
+  "appMenuHideOthers": "Скрыть других",
+  "appMenuUnhide": "Показать всех",
   "appMenuQuit": "Выйти из Session",
   "editMenuUndo": "Отменить",
   "editMenuRedo": "Вернуть",
   "editMenuCut": "Вырезать",
   "editMenuCopy": "Копировать",
   "editMenuPaste": "Вставить",
-  "editMenuPasteAndMatchStyle": "Вставить текст из буфера обмена",
+  "editMenuPasteAndMatchStyle": "Вставить с соответствием стилю",
   "editMenuDelete": "Удалить",
   "editMenuSelectAll": "Выбрать всё",
   "windowMenuClose": "Закрыть окно",
-  "windowMenuMinimize": "Минимизировать",
+  "windowMenuMinimize": "Свернуть",
   "windowMenuZoom": "Увеличить",
   "windowMenuBringAllToFront": "Вынести всё на передний план",
   "viewMenuResetZoom": "Фактический размер",
   "viewMenuZoomIn": "Увеличить",
   "viewMenuZoomOut": "Уменьшить",
-  "viewMenuToggleFullScreen": "Переключить полный экран",
+  "viewMenuToggleFullScreen": "Полноэкранный режим",
   "viewMenuToggleDevTools": "Переключить инструменты разработчика",
   "contextMenuNoSuggestions": "Нет предложений",
   "openGroupInvitation": "Приглашение в открытую группу",
   "joinOpenGroupAfterInvitationConfirmationTitle": "Присоединиться к $roomName$?",
   "joinOpenGroupAfterInvitationConfirmationDesc": "Вы уверен, что хотите присоединиться к открытой группе $roomName$?",
   "enterSessionIDOrONSName": "Введите Session ID или ONS имя",
-  "loading": "Загрузка...",
+  "loading": "Загружается...",
   "optimizingApplication": "Оптимизация приложения...",
   "done": "Готово",
   "me": "Я",
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Только создатель группы может удалять пользователей",
   "createAccount": "Создать аккаунт",
   "signIn": "Войти",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Познакомьтесь со своим Session ID",
   "allUsersAreRandomly...": "Ваш Session ID - это уникальный адрес, который другие пользователи могут использовать для связи с вами при помощи Session. Поскольку ваш Session ID никак не связан с вашей настоящей личностью, он по определению является полностью анонимным и конфиденциальным.",
   "getStarted": "Начать",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "Восстановите свой аккаунт",
   "or": "или",
   "ByUsingThisService...": "Используя этот сервис, вы соглашаетесь с <a href=\"https://getsession.org/legal/#tos\">Условиями обслуживания</a> и <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Политикой конфиденциальности</a>",
-  "beginYourSession": "Начать<br />свою<br />сессию.",
+  "beginYourSession": "Начать свою сессию.",
   "welcomeToYourSession": "Добро пожаловать в вашу сессию",
   "newSession": "Новый диалог",
   "searchFor...": "Поиск по беседам или контактам",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "Первое непрочитанное сообщение находится выше",
   "sendRecoveryPhraseTitle": "Отправка секретной фразы",
   "sendRecoveryPhraseMessage": "Вы пытаетесь отправить вашу секретную фразу, которая может быть использована для доступа к вашей учетной записи. Вы уверены, что хотите отправить это сообщение?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Уведомления - $setting$"
 }
