--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "只有群组的创建者可以移除用户",
   "createAccount": "Create Account",
   "signIn": "登录",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "向您的Session ID打个招呼吧",
   "allUsersAreRandomly...": "您的Session ID是其他用户在与您聊天时使用的独一无二的地址。Session ID与您的真实身份无关，它在设计上完全是匿名且私密的。",
   "getStarted": "开始使用",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "恢复您的帐号",
   "or": "或者",
   "ByUsingThisService...": "通过使用此服务，您同意我们的 <a href=\"https://getsession.org/legal/#tos\">服务条款</a> 和 <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">隐私政策</a>",
-  "beginYourSession": "开始<br />您的<br />会话。",
+  "beginYourSession": "开始<您的会话。",
   "welcomeToYourSession": "欢迎来到 Session 。",
   "newSession": "新建私人聊天",
   "searchFor...": "Search for conversations or contacts",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$"
 }
