--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Només el creador del grup pot eliminar usuaris",
   "createAccount": "Create Account",
   "signIn": "Iniciar sessió",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Saluda al teu Session ID",
   "allUsersAreRandomly...": "El teu Session ID és l'adreça única que els usuaris poden utilitzar per contactar-te a Session. Sense connexió amb la teva identitat real, el teu Session ID és totalment anònim i privat per disseny.",
   "getStarted": "Comencem!",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "Restableix el teu compte",
   "or": "o bé",
   "ByUsingThisService...": "En utilitzar aquest servei, accepteu les nostres <a href=\"https://getsession.org/legal/#tos\"> Condicions del servei </a> i <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\"> Política de privadesa </a>",
-  "beginYourSession": "Comenceu <br /> la vostra <br /> sessió.",
+  "beginYourSession": "Comenceu la vostra sessió.",
   "welcomeToYourSession": "Benvingut a Session",
   "newSession": "Nova sessió",
   "searchFor...": "Search for conversations or contacts",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$"
 }
