--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -131,7 +131,7 @@
   "deleteForEveryone": "Delete for Everyone",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages, sessions, and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -150,7 +150,7 @@
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Allow access to camera and microphone",
   "spellCheckTitle": "Spell Check",
@@ -355,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
   "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
-  "beginYourSession": "Begin<br />your<br />Session.",
+  "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
   "searchFor...": "Search for conversations or contacts",
