--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -277,35 +277,35 @@
   "yourSessionID": "Tu ID de Session",
   "setAccountPasswordTitle": "Establecer contraseña de la cuenta",
   "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
-  "changeAccountPasswordTitle": "Change Account Password",
+  "changeAccountPasswordTitle": "Cambiar la Contraseña de la Cuenta",
   "changeAccountPasswordDescription": "Change your password",
   "removeAccountPasswordTitle": "Remove Account Password",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
-  "enterPassword": "Please enter your password",
-  "confirmPassword": "Confirm password",
+  "enterPassword": "Por favor, introduce tu contraseña",
+  "confirmPassword": "Confirmar contraseña",
   "pasteLongPasswordToastTitle": "El contenido del portapapeles excede la longitud máxima de la contraseña de $max_pwd_len$ caracteres.",
   "showRecoveryPhrasePasswordRequest": "Please enter your password",
   "recoveryPhraseSavePromptMain": "Tu frase de recuperación es la llave maestra de tu ID de Session, puedes usarla para recuperar tu ID de Session en caso de pérdida de acceso a tu dispositivo. Guarda tu frase de recuperación en un lugar seguro y no se la digas a nadie.",
-  "invalidOpenGroupUrl": "Invalid URL",
+  "invalidOpenGroupUrl": "URL no válida",
   "copiedToClipboard": "Copiado en el portapapeles",
-  "passwordViewTitle": "Type In Your Password",
+  "passwordViewTitle": "Escribe Tu Contraseña",
   "unlock": "Desbloquear",
   "password": "Contraseña",
   "setPassword": "Set Password",
   "changePassword": "Cambiar Contraseña",
-  "removePassword": "Remove Password",
+  "removePassword": "Eliminar Contraseña",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
   "typeInOldPassword": "Please type in your old password",
   "invalidOldPassword": "Old password is invalid",
-  "invalidPassword": "Invalid password",
-  "noGivenPassword": "Please enter your password",
+  "invalidPassword": "Contraseña inválida",
+  "noGivenPassword": "Por favor, introduce tu contraseña",
   "passwordsDoNotMatch": "Passwords do not match",
   "setPasswordInvalid": "Passwords do not match",
   "changePasswordInvalid": "The old password you entered is incorrect",
-  "removePasswordInvalid": "Incorrect password",
+  "removePasswordInvalid": "Contraseña incorrecta",
   "setPasswordTitle": "Set Password",
-  "changePasswordTitle": "Changed Password",
-  "removePasswordTitle": "Removed Password",
+  "changePasswordTitle": "Contraseña Cambiada",
+  "removePasswordTitle": "Contraseña Eliminada",
   "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
   "removePasswordToastDescription": "You have removed your password.",
@@ -331,12 +331,14 @@
   "add": "Añadir",
   "addingContacts": "Añadiendo contactos a",
   "noContactsToAdd": "No hay contactos para añadir",
-  "noMembersInThisGroup": "No other members in this group",
-  "noModeratorsToRemove": "no moderators to remove",
+  "noMembersInThisGroup": "No hay otros miembros en este grupo",
+  "noModeratorsToRemove": "no hay moderadores para eliminar",
   "onlyAdminCanRemoveMembers": "Tu no eres el creador",
   "onlyAdminCanRemoveMembersDesc": "Sólo el creador del grupo puede eliminar usuarios",
   "createAccount": "Create Account",
   "signIn": "Iniciar sesión",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Saluda a tu ID de Session",
   "allUsersAreRandomly...": "Tu ID de Session es la dirección única que las personas pueden usar para contactarte en Session. Por diseño, tu ID de Session es totalmente anónima y privada, sin vínculo con tu identidad real.",
   "getStarted": "Comenzar",
@@ -353,10 +355,10 @@
   "restoreUsingRecoveryPhrase": "Restaura tu cuenta",
   "or": "o",
   "ByUsingThisService...": "Al usar este servicio, aceptas nuestros <a href=\"https://getsession.org/legal/#tos\">Términos y condiciones</a> y <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Políticas de privacidad</a>",
-  "beginYourSession": "Comienza<br />tu<br />Session.",
+  "beginYourSession": "Comienza tu Session.",
   "welcomeToYourSession": "Bienvenido a tu Session",
   "newSession": "Nueva Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Buscar conversaciones o contactos",
   "enterSessionID": "Session ID",
   "enterSessionIDOfRecipient": "Ingresa la ID de Session del destinatario",
   "usersCanShareTheir...": "Los usuarios pueden compartir su ID de Session yendo a los ajustes de su cuenta y pulsando en Compartir ID de Session o compartiendo su código QR",
@@ -417,7 +419,17 @@
   "pinConversationLimitTitle": "Límite de conversaciones ancladas",
   "pinConversationLimitToastDescription": "Solo puedes anclar $number$ conversaciones",
   "latestUnreadIsAbove": "El primer mensaje no leído está arriba",
-  "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
+  "sendRecoveryPhraseTitle": "Enviando Frase de Recuperación",
   "sendRecoveryPhraseMessage": "Estás intentando enviar tu frase de recuperación, que puede utilizarse para acceder a tu cuenta. ¿Estás seguro de que deseas enviar este mensaje?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notificaciones - $setting$"
 }
