--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -11,50 +11,50 @@
   "appMenuHide": "छिपाएँ",
   "appMenuHideOthers": "बाकियों को छुपाएं",
   "appMenuUnhide": "सभी को दिखाएं",
-  "appMenuQuit": "Quit Session",
-  "editMenuUndo": "Undo",
-  "editMenuRedo": "Redo",
-  "editMenuCut": "Cut",
-  "editMenuCopy": "Copy",
-  "editMenuPaste": "Paste",
+  "appMenuQuit": "क्विट सेशन",
+  "editMenuUndo": "वापस लाएं",
+  "editMenuRedo": "फिर से करें",
+  "editMenuCut": "कट",
+  "editMenuCopy": "कॉपी करें",
+  "editMenuPaste": "पेस्ट करें",
   "editMenuPasteAndMatchStyle": "Paste and Match Style",
   "editMenuDelete": "हटाना",
   "editMenuSelectAll": "Select All",
-  "windowMenuClose": "Close Window",
-  "windowMenuMinimize": "Minimize",
-  "windowMenuZoom": "Zoom",
-  "windowMenuBringAllToFront": "Bring All to Front",
-  "viewMenuResetZoom": "Actual Size",
-  "viewMenuZoomIn": "Zoom In",
-  "viewMenuZoomOut": "Zoom Out",
-  "viewMenuToggleFullScreen": "Toggle Full Screen",
-  "viewMenuToggleDevTools": "Toggle Developer Tools",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "windowMenuClose": "विंडो बंद करें",
+  "windowMenuMinimize": "छोटा करें",
+  "windowMenuZoom": "ज़ूम",
+  "windowMenuBringAllToFront": "सभी को सामने लाओ",
+  "viewMenuResetZoom": "वास्तविक आकार",
+  "viewMenuZoomIn": "बड़ा करें",
+  "viewMenuZoomOut": "छोटा करें",
+  "viewMenuToggleFullScreen": "पूर्णस्क्रीन में जाएं",
+  "viewMenuToggleDevTools": "डेवलपर टूल टॉगल करें",
+  "contextMenuNoSuggestions": "कोई सुझाव नहीं हैं",
+  "openGroupInvitation": "ग्रुप आमंत्रण खोलें",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "$roomName$ से जुड़ें?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "क्या आप $roomName$ open ग्रुप से जुड़ना चाहते हैं?",
+  "enterSessionIDOrONSName": "Session आईडी या ओएनएस नाम दर्ज करें",
   "loading": "लोड हो रहा है",
   "optimizingApplication": "Optimizing application...",
-  "done": "Done",
+  "done": "पूरा हुआ",
   "me": "मुझे",
   "view": "राय",
   "youLeftTheGroup": "आपने समूह छोड़ दिया",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "इस समूह से आप हटा दिए गए",
+  "unreadMessage": "अपठित मेसेजस",
+  "unreadMessages": "अपठित मेसेजस",
   "debugLogExplanation": "यह अभिलेख ऑनलाइन भेजा जाएगा अन्या सहयोगियो के जाँच पड़ताल के लिए. भेजने से पहेले ठीक से सनपदान कर ले",
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "मामले की रिपोर्ट करें",
   "gotIt": "समझ गया!",
   "submit": "जमा करें",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "सभी को पढ़ा हुआ मार्क करें",
   "incomingError": "Error handling incoming message",
-  "media": "Media",
+  "media": "मीडिया",
   "mediaEmptyState": "You don’t have any media in this conversation",
-  "documents": "Documents",
+  "documents": "दस्तावेज़",
   "documentsEmptyState": "You don’t have any documents in this conversation",
-  "today": "Today",
+  "today": "आज",
   "yesterday": "कल",
   "thisWeek": "This Week",
   "thisMonth": "इस महीने",
@@ -74,8 +74,8 @@
   "submitDebugLog": "डीबग लॉग",
   "debugLog": "लॉग को डीबग करें",
   "goToReleaseNotes": "Go to Release Notes",
-  "goToSupportPage": "Go to Support Page",
-  "menuReportIssue": "Report an Issue",
+  "goToSupportPage": "सहायता पेज पर जाएँ",
+  "menuReportIssue": "समस्या की रिपोर्ट करें…",
   "about": "हमारे बारे में",
   "speech": "भाषण",
   "show": "दिखाना",
@@ -88,19 +88,19 @@
   "settingsHeader": "सेटिंग्स",
   "typingAlt": "Typing animation for this conversation",
   "contactAvatarAlt": "Avatar for contact $name$",
-  "downloadAttachment": "Download Attachment",
+  "downloadAttachment": "अनुलग्नक डाउनलोड करें",
   "replyToMessage": "Reply to Message",
   "replyingToMessage": "को जवाब दे रहे हैं",
   "originalMessageNotFound": "Original message not found",
-  "originalMessageNotAvailable": "Original message no longer available",
+  "originalMessageNotAvailable": "मूल संदेश अब उपलब्ध नहीं है",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
-  "recording": "Recording",
-  "you": "You",
+  "recording": "रिकॉर्डिंग",
+  "you": "आप",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "To send audio messages, allow Session Desktop to access your microphone.",
-  "audio": "Audio",
-  "video": "Video",
-  "photo": "Photo",
+  "audio": "ऑडियो",
+  "video": "वीडियो",
+  "photo": "फ़ोटो",
   "cannotUpdate": "Cannot Update",
   "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
   "ok": "ठीक",
@@ -131,7 +131,7 @@
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "इस वार्तालाप को स्थायी रूप से हटाएं?",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, sessions, and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "Create Account",
   "signIn": "Sign In",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "Restore your account",
   "or": "or",
   "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
-  "beginYourSession": "Begin<br />your<br />Session.",
+  "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
   "searchFor...": "Search for conversations or contacts",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$"
 }
