--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "アカウントを作成",
   "signIn": "ログイン",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Session ID をご紹介します",
   "allUsersAreRandomly...": "Session ID は、Session で連絡を取るために使用できる一意のアドレスです。本当のアイデンティティに関係なく、あなたの Session ID は設計上完全に匿名でプライベートです。",
   "getStarted": "Get started",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "アカウントを復元する",
   "or": "or",
   "ByUsingThisService...": "本サービスを利用する場合、<a href=\"https://getsession.org/legal/#tos\">利用規約</a>および<a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">プライバシーポリシー</a>に同意するものとします",
-  "beginYourSession": "Begin<br />your<br />Session.",
+  "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "新しいセッション",
   "searchFor...": "Search for conversations or contacts",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "Notifications - $setting$"
 }
