--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -22,7 +22,7 @@
   "editMenuSelectAll": "Select all",
   "windowMenuClose": "කවුළුව වසන්න",
   "windowMenuMinimize": "Minimize",
-  "windowMenuZoom": "Zoom",
+  "windowMenuZoom": "විශාලනය",
   "windowMenuBringAllToFront": "Bring All to Front",
   "viewMenuResetZoom": "සැබෑ ප්‍රමාණය",
   "viewMenuZoomIn": "විශාලනය කරන්න",
@@ -131,7 +131,7 @@
   "deleteForEveryone": "Delete for Everyone",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages, sessions, and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -337,6 +337,8 @@
   "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
   "createAccount": "ගිණුම සාදන්න",
   "signIn": "පිවිසෙන්න",
+  "startInTrayTitle": "Start in Tray",
+  "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
@@ -353,7 +355,7 @@
   "restoreUsingRecoveryPhrase": "ගිණුම ප්‍රත්‍යර්පණය කරන්න",
   "or": "හෝ",
   "ByUsingThisService...": "මෙම සේවාව භාවිතා කිරීමෙන්, ඔබ අපගේ <a href=\"https://getsession.org/legal/#tos\">සේවාවේ කොන්දේසි</a> සහ <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">රහස්‍යතා ප්‍රතිපත්තිය</a> ට එකඟ වේ",
-  "beginYourSession": "Begin<br />your<br />Session.",
+  "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
   "newSession": "New Session",
   "searchFor...": "සම්භාෂණ හෝ සබඳතා සඳහා සොයන්න",
@@ -419,5 +421,15 @@
   "latestUnreadIsAbove": "නොකියවූ පළමු පණිවිඩය ඉහත ඇත",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
+  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "deviceOnly": "Device Only",
+  "entireAccount": "Entire Account",
+  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
+  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
   "notificationSubtitle": "දැනුම්දීම් - $setting$"
 }
