added perfect negotiation
Adding toast for cam and audio permission when making a call.

adding missed call message and toast when a call is received while mid-call.

background call message work

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -447,5 +447,11 @@
   "incomingCall": "Incoming call",
   "accept": "Accept",
   "decline": "Decline",
-  "endCall": "End call"
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "Cancel your exiting call session.",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed"
 }
